Tue Mar 23 21:57:41 GMT 2010  Richard Boulton <richard@tartarus.org>

	* bin/xapian-compact-chert.cc: Print the colliding metadata key in
	  the event of a key's values being different in each database.

Mon Feb 22 20:49:29 GMT 2010  Richard Boulton <richard@tartarus.org>

	* bin/: Add a --rebuild-chunks option, and implement it for chert,
	  to rebuild the chunks when compacting.  Allows overlapping docids
	  with --no-renumber.
	* tests/api_compact.cc: Add compactrebuildchunks1 and
	  compactrebuildchunks2 to test the --rebuild-chunks option.

Mon Feb 22 20:40:29 GMT 2010  Richard Boulton <richard@tartarus.org>

	* Apply patch "sortemptylast.patch" from ticket #452:
	* api/keymaker.cc,include/xapian/keymaker.h: Add a third argument
	  to MultiValueKeyMaker::add_value() allowing a value to be used in
	  place of missing values to be specified.  Replace use of
	  pair<Xapian::valueno, bool> with a struct KeySpec. 
	* tests/api_sorting.cc: Add sortfunctor3, and extend
	  multivaluekeymaker1, to test this.

Thu Jun 03 12:09:35 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/Makefile.am: Fix building of zlib-vg.so in VPATH builds.

Thu Jun 03 11:49:31 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/orpostlist.cc,tests/api_backend.cc: Fix several bugs in
	  OrPostList::check() (introduced since 1.2.0).  Fixes ticket #485.
	  Specifically, we have to check a sub-postlist even if head=did,
	  because we need to know if that sub-postlist is valid.  Also, if
	  a sub-postlist is not valid, set its head to did+1, since we know
	  that we're no longer interested in matches before did, and this
	  allows the OrPostList to assume that the minimum docid of its
	  children is the current docid.

Thu Jun 03 07:15:24 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/: Implement MultiXorPostList which returns correct weights
	  for XOR of more than 2 subqueries, and drop XorPostList completely.
	  (ticket#475)