@@ -23,14 +23,14 @@
 
 #include "xapian/cluster.h"
 
-#include "omdebug.h"
+#include "debuglog.h"
 
 #include <cmath>
 #include <map>
 
 Xapian::DocSimCosine::~DocSimCosine()
 {
-    DEBUGAPICALL(void, "DocSimCosine::~DocSimCosine", "");
+    LOGCALL_DTOR(API, "DocSimCosine");
 }
 
 double
@@ -39,9 +39,8 @@ Xapian::DocSimCosine::similarity(TermIterator a_begin,
 				 TermIterator b_begin,
 				 const TermIterator & b_end) const
 {
-    DEBUGAPICALL(double, "DocSimCosine::~calculate_similarity",
-		 a_begin << ", " << a_end << ", " <<
-		 b_begin << ", " << b_end);
+    LOGCALL(API, double, "DocSimCosine::~calculate_similarity",
+	    a_begin | a_end | b_begin | b_end);
     DummyTermFreqSource dummytfs;
     const TermFreqSource * tfs = ((freqsource == NULL) ? &dummytfs : freqsource);
 
